Adding a draft of the slides for the committee meeting.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 Hello!<br>
 <br>
-Welcome to personal pages of Jan Povala. This site has currently no content. Coming soon.
+Welcome to personal pages of Jan Povala.
+<br>
 
+
+<h3>Misc</h3>
+<ul>
+<li>  <a href="./files/2018-05-committee-slides.pdf">ICONIC Group meeting slides 2018</a></li>
+</ul>
