--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
-Hello!<br>
-<br>
-Welcome to personal pages of Jan Povala.
-<br>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119251089-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119251089-1');
+    </script>
+    <title>Jan Povala</title>
+</head>
+
+<body>
+        Hello!<br>
+        <br>
+        Welcome to personal pages of Jan Povala.
+        <br>
+        
+        <h3>Misc</h3>
+        <ul>
+        <li>  <a href="./files/2018-05-committee-slides.pdf">ICONIC Group meeting slides 2018</a></li>
+        </ul>
+</body>
+</html> 
 
 
-<h3>Misc</h3>
-<ul>
-<li>  <a href="./files/2018-05-committee-slides.pdf">ICONIC Group meeting slides 2018</a></li>
-</ul>
+
+
+
+
+
+
+
+
+
+
+
