--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 </head>
 
 <body>
-        Hello!<br>
-        <br>
-        Welcome to personal pages of Jan Povala.
-        <br>
-        
-        <h3>Misc</h3>
-        <ul>
-        <li>  <a href="./files/2018-05-committee-slides.pdf">ICONIC Group meeting slides 2018</a></li>
-        </ul>
+Hello!<br>
+<br>
+Welcome to personal pages of Jan Povala. I'm currently an MRes student at the CDT in Financial Computing. I'm studying dynamics of crime and the underlying processes
+    that drive crime. My studies are part of the <a href="https://iconicmath.org/">ICONIC project</a>.
+<br>
+
+
+<h3>Misc</h3>
+<ul>
+<li>  ICONIC Group meeting May 2018 (<a href="./files/2018-05-committee-slides.pdf">slides</a>)</li>
+</ul>
 </body>
 </html> 
 
