--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 
     gtag('config', 'UA-119251089-1');
     </script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119251089-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119251089-2');
+    </script>
+
+    
     <title>Jan Povala</title>
 </head>
 
