Adding slides for the adivsory board meeting.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         
         <h3>Misc</h3>
         <ul>
-        <li>  <a href="./files/2018-05-committee-slides.pdf">ICONIC Group meeting slides 2018</a></li>
+	<li>  July 2018 - ICONIC Advisory board presentation <a href="./files/2018-07-advisory-board-slides.pdf">(slides)</a></li>
+        <li>  May 2018 - ICONIC Group meeting <a href="./files/2018-05-committee-slides.pdf">(slides)</a></li>
         </ul>
 </body>
 </html> 
