--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 Hello!<br>
 <br>
-Welcome to personal pages of Jan Povala. I'm currently an MRes student at the CDT in Financial Computing. I'm studying dynamics of crime and the underlying processes
+Welcome to personal pages of Jan Povala. I'm currently a first-year PhD student in Statistics. I'm studying dynamics of crime and the underlying processes
     that drive crime. My studies are part of the <a href="https://iconicmath.org/">ICONIC project</a>.
 <br>
 
